--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Hemadwivedi/BookToShare#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.0",
     "mysql": "^2.18.1"
   }
 }
