--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1"
   }
 }
