--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/Hemadwivedi/BookToShare#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
+    "express-session": "^1.17.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "react-scripts": "^3.3.1",
+    "sequelize": "^5.21.5"
   }
 }
