--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "Netisedavam7",
+      "password": "password",
       "database": "book_db",
       "host": "127.0.0.1",
       "dialect": "mysql"
